--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,8 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <swagger2.version>2.7.0</swagger2.version>
+        <swagger2.ui.version>2.7.0</swagger2.ui.version>
     </properties>
 
     <dependencies>
