--- a/summer-web/pom.xml
+++ b/summer-web/pom.xml
@@ -11,5 +11,18 @@
 
     <artifactId>summer-web</artifactId>
 
+    <dependencies>
+        <!--swagger-->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>${swagger2.version}</version>
+        </dependency>
 
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>${swagger2.ui.version}</version>
+        </dependency>
+    </dependencies>
 </project>
