--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <java.version>1.8</java.version>
         <swagger2.version>2.7.0</swagger2.version>
         <swagger2.ui.version>2.7.0</swagger2.ui.version>
+        <swagger.bootstrap.ui.version>1.9.3</swagger.bootstrap.ui.version>
     </properties>
 
     <dependencies>
