--- a/summer-web/pom.xml
+++ b/summer-web/pom.xml
@@ -24,5 +24,12 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>${swagger2.ui.version}</version>
         </dependency>
+
+        <!--增强型swagger-->
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>swagger-bootstrap-ui</artifactId>
+            <version>${swagger.bootstrap.ui.version}</version>
+        </dependency>
     </dependencies>
 </project>
