--- a/summer-web/pom.xml
+++ b/summer-web/pom.xml
@@ -40,5 +40,21 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.bxbro</groupId>
+            <artifactId>summer-fileservice-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.bxbro</groupId>
+            <artifactId>summer-fileservice-s3</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.bxbro</groupId>
+            <artifactId>summer-fileservice-local</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 </project>
