--- a/summer-fileservice/summer-fileservice-api/pom.xml
+++ b/summer-fileservice/summer-fileservice-api/pom.xml
@@ -11,5 +11,6 @@
 
     <artifactId>summer-fileservice-api</artifactId>
     <packaging>jar</packaging>
+    <version>0.0.1-SNAPSHOT</version>
 
 </project>
