--- a/summer-fileservice/summer-fileservice-s3/pom.xml
+++ b/summer-fileservice/summer-fileservice-s3/pom.xml
@@ -11,6 +11,7 @@
 
     <artifactId>summer-fileservice-s3</artifactId>
     <packaging>jar</packaging>
+    <version>0.0.1-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
