--- a/summer-web/src/main/resources/application-dev.yml
+++ b/summer-web/src/main/resources/application-dev.yml
@@ -4,8 +4,6 @@ server:
     context-path: /summer
 swagger:
   enable: true
-
-#Amazon S3配置
 summer:
   resources:
     root-dir: D:/summer/resource_root
@@ -13,21 +11,16 @@ summer:
     bgm-dir: /bgm
     pic-dir: /pic
     logo-dir: /logo
-  amazons3:
-    accesskey: fd809d16971e45a8923dc8a75b526235
-    secretkey: ba64ea97f882444b9d30082bb638de62
-    endpoint: http://s3.bj.bcebos.com
-    region: bj
   file-service:
     service-type: local
-    res-url-prefix: /hxresource
+    res-url-prefix: /resource
     context-path: ${server.servlet.context-path}
-    s3:
-      access-key:
-      secret-key:
-      endpoint:
-      signing-region:
+    s3: #Amazon S3配置
+      access-key: fd809d16971e45a8923dc8a75b526235
+      secret-key: ba64ea97f882444b9d30082bb638de62
+      endpoint: http://s3.bj.bcebos.com
+      signing-region: bj
       s3-root-bucket-name: dong-box
-      path-seperator-replacor: HHEEXXIINN
+      path-seperator-replacor: SUMMER
     local:
       res-root-dir: ${summer.resources.root-dir}
