[MOD]完善文件上传接口的存放路径的设置

--- a/summer-web/src/main/resources/application-dev.yml
+++ b/summer-web/src/main/resources/application-dev.yml
@@ -8,9 +8,9 @@ summer:
   resources:
     root-dir: D:/summer/resource_root
     prefix: /resource
-    bgm-dir: /bgm
     pic-dir: /pic
-    logo-dir: /logo
+    audio-dir: /audio
+    video-dir: /video
   file-service:
     service-type: local
     res-url-prefix: /resource
