--- a/summer-web/src/main/resources/application-dev.yml
+++ b/summer-web/src/main/resources/application-dev.yml
@@ -2,6 +2,12 @@ server:
   port: 8081
   servlet:
     context-path: /summer
+spring:
+  servlet:
+    multipart:
+      enabled: true
+      max-file-size: 500MB
+      max-request-size: 500MB
 swagger:
   enable: true
 summer:
