[MOD]修改文件上传接口，增加文件信息入库的逻辑

--- a/summer-common/pom.xml
+++ b/summer-common/pom.xml
@@ -14,6 +14,7 @@
     <version>0.0.1-SNAPSHOT</version>
 
     <dependencies>
+        <!--start: mybatis plus generator依赖的包-->
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-generator</artifactId>
@@ -31,5 +32,26 @@
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <!--end: mybatis plus generator依赖的包-->
+
+        <!--druid-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>${druid.version}</version>
+        </dependency>
+
+        <!--mybatis plus-->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>${mybatis-plus-boot-starter.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-extension</artifactId>
+            <version>${mybatis-plus-extension.version}</version>
+        </dependency>
+
     </dependencies>
 </project>
