--- a/pom.xml
+++ b/pom.xml
@@ -29,8 +29,11 @@
         <aws-java-sdk-s3.version>1.11.821</aws-java-sdk-s3.version>
         <commons-io.version>2.6</commons-io.version>
         <slf4j-api.version>1.7.30</slf4j-api.version>
-        <mybatis-plus-generator.version>3.2.0</mybatis-plus-generator.version>
+        <mybatis-plus-generator.version>3.1.0</mybatis-plus-generator.version>
         <velocity-engine-core.version>2.0</velocity-engine-core.version>
+        <druid.version>1.1.23</druid.version>
+        <mybatis-plus-boot-starter.version>3.1.0</mybatis-plus-boot-starter.version>
+        <mybatis-plus-extension.version>3.1.0</mybatis-plus-extension.version>
     </properties>
 
     <dependencies>
