[MOD]1.整合pom 2.测试s3文件上传

--- a/summer-web/src/main/resources/application-dev.yml
+++ b/summer-web/src/main/resources/application-dev.yml
@@ -24,7 +24,7 @@ summer:
     audio-dir: /audio
     video-dir: /video
   file-service:
-    service-type: local
+    service-type: s3
     res-url-prefix: /resource
     context-path: ${server.servlet.context-path}
     s3: #Amazon S3配置
