--- a/summer-web/pom.xml
+++ b/summer-web/pom.xml
@@ -75,5 +75,11 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
+        <!--javax.mail-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
