[ADD]用户管理：增删改查功能实现

--- a/summer-web/pom.xml
+++ b/summer-web/pom.xml
@@ -81,5 +81,11 @@
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>4.1.1</version>
+        </dependency>
+
     </dependencies>
 </project>
