[BUG]解决打包失败的问题 (Unable to find main class)

--- a/pom.xml
+++ b/pom.xml
@@ -37,13 +37,30 @@
     </properties>
 
 
-    <build>
+    <!--不使用springboot的maven插件，改为使用普通的maven插件，
+        使用springboot的maven插件意味着每个模块都需要有启动类，而使用普通的插件则不需要。-->
+
+    <!--<build>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
+    </build>-->
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
+
 
 </project>
