--- a/summer-web/pom.xml
+++ b/summer-web/pom.xml
@@ -87,5 +87,10 @@
             <version>4.1.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
