--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,10 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <swagger2.version>2.7.0</swagger2.version>
-        <swagger2.ui.version>2.7.0</swagger2.ui.version>
+        <swagger2.version>2.9.2</swagger2.version>
+        <swagger2.ui.version>2.9.2</swagger2.ui.version>
+        <swagger-annotations-version>1.5.21</swagger-annotations-version>
+        <swagger-models-version>1.5.21</swagger-models-version>
         <swagger.bootstrap.ui.version>1.9.3</swagger.bootstrap.ui.version>
         <aws-java-sdk-s3.version>1.11.821</aws-java-sdk-s3.version>
         <commons-io.version>2.6</commons-io.version>
@@ -37,6 +39,69 @@
         <hutool.version>4.1.1</hutool.version>
         <fastjson.version>1.2.47</fastjson.version>
     </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <!--swagger-->
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger2</artifactId>
+                <version>${swagger2.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>io.swagger</groupId>
+                        <artifactId>swagger-annotations</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>io.swagger</groupId>
+                        <artifactId>swagger-models</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>io.swagger</groupId>
+                <artifactId>swagger-annotations</artifactId>
+                <version>${swagger-annotations-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.swagger</groupId>
+                <artifactId>swagger-models</artifactId>
+                <version>${swagger-models-version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger-ui</artifactId>
+                <version>${swagger2.ui.version}</version>
+            </dependency>
+
+            <!--增强型swagger-->
+            <dependency>
+                <groupId>com.github.xiaoymin</groupId>
+                <artifactId>swagger-bootstrap-ui</artifactId>
+                <version>${swagger.bootstrap.ui.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-all</artifactId>
+                <version>${hutool.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>${fastjson.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid</artifactId>
+                <version>${druid.version}</version>
+            </dependency>
+
+        </dependencies>
+    </dependencyManagement>
 
 
     <build>
