--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
         <mybatis-plus-extension.version>3.2.0</mybatis-plus-extension.version>
         <hutool.version>4.1.1</hutool.version>
         <fastjson.version>1.2.47</fastjson.version>
+        <joda.time.version>2.9.9</joda.time.version>
     </properties>
 
     <dependencyManagement>
@@ -98,6 +99,12 @@
                 <groupId>com.alibaba</groupId>
                 <artifactId>druid</artifactId>
                 <version>${druid.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>joda-time</groupId>
+                <artifactId>joda-time</artifactId>
+                <version>${joda.time.version}</version>
             </dependency>
 
         </dependencies>
