--- a/summer-test/pom.xml
+++ b/summer-test/pom.xml
@@ -10,6 +10,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>summer-test</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>26.0-jre</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 
 </project>
