--- a/summer-study/pom.xml
+++ b/summer-study/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>summer-test</artifactId>
+    <artifactId>summer-study</artifactId>
     <dependencies>
         <dependency>
             <groupId>com.google.guava</groupId>
