--- a/summer-web/src/main/resources/application-dev.yml
+++ b/summer-web/src/main/resources/application-dev.yml
@@ -48,3 +48,6 @@ summer:
     to-address: 1756330108@qq.com
     # 开发调试  每分钟  0 0/1 * * * ?   每天  0 0 0 1/1 * ?
     cron: 0 0 0 1/1 * ?
+mybatis-plus:
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
