[MOD]update pom.xml about druid

--- a/pom.xml
+++ b/pom.xml
@@ -97,9 +97,10 @@
                 <version>${fastjson.version}</version>
             </dependency>
 
+
             <dependency>
                 <groupId>com.alibaba</groupId>
-                <artifactId>druid</artifactId>
+                <artifactId>druid-spring-boot-starter</artifactId>
                 <version>${druid.version}</version>
             </dependency>
 
