--- a/summer-common/pom.xml
+++ b/summer-common/pom.xml
@@ -32,10 +32,9 @@
         </dependency>
         <!--end: mybatis plus generator依赖的包-->
 
-        <!--druid-->
         <dependency>
             <groupId>com.alibaba</groupId>
-            <artifactId>druid</artifactId>
+            <artifactId>druid-spring-boot-starter</artifactId>
         </dependency>
 
         <!--mybatis plus-->
