--- a/summer-web/src/main/resources/application-prod.yml
+++ b/summer-web/src/main/resources/application-prod.yml
@@ -10,7 +10,7 @@ spring:
       max-request-size: 500MB
   datasource:
     username: root
-    password: 1234
+    password: bxxd12345+
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/summer?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8
     type: com.alibaba.druid.pool.DruidDataSource
