--- a/summer-web/pom.xml
+++ b/summer-web/pom.xml
@@ -136,6 +136,11 @@
             <version>3.3.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
