--- a/summer-web/src/main/resources/application.yml
+++ b/summer-web/src/main/resources/application.yml
@@ -1,3 +1,10 @@
 spring:
   profiles:
     active: dev
+management:
+  endpoints:
+    web:
+      exposure:
+        # 暴露除env外的所有端点 （仅为学习用，实际生产中不建议这么做，需配合spring-security使用）
+        include: '*'
+        exclude: env
