--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,10 @@
     <modules>
         <module>summer-common</module>
         <module>summer-web</module>
-        <module>summer-study</module>
         <module>summer-fileservice</module>
         <module>summer-yunstore</module>
         <module>summer-eureka</module>
+        <module>summer-compute</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
