--- a/summer-web/pom.xml
+++ b/summer-web/pom.xml
@@ -31,12 +31,6 @@
             <scope>test</scope>
         </dependency>
 
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <scope>test</scope>
-        </dependency>
-
         <!--文件服务-->
         <dependency>
             <groupId>com.bxbro</groupId>
@@ -149,6 +143,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
+            <version>2.0.0.RELEASE</version>
         </dependency>
     </dependencies>
 
