--- a/summer-eureka/src/main/resources/application-peer1.yml
+++ b/summer-eureka/src/main/resources/application-peer1.yml
@@ -7,7 +7,7 @@ eureka:
 #    register-with-eureka: false
 #    fetch-registry: false
     serviceUrl:
-      defaultZone: http://peer2:9528/eureka/
+      defaultZone: http://peer2:9528/eureka/,http://peer3:9529/eureka/
 spring:
   application:
     name: summer-eureka-server
