--- a/summer-web/pom.xml
+++ b/summer-web/pom.xml
@@ -149,6 +149,17 @@
             <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
             <version>2.0.0.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+            <version>2.0.0.RELEASE</version>
+        </dependency>
+
+        <!--<dependency>
+            <groupId>com.bxbro</groupId>
+            <artifactId>hello-spring-boot-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>-->
     </dependencies>
 
     <build>
