--- a/summer-web/src/main/resources/application.yml
+++ b/summer-web/src/main/resources/application.yml
@@ -13,4 +13,4 @@ management:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://peer1:9527/eureka/,http://peer2:9528/eureka/
+      defaultZone: http://peer1:9527/eureka/,http://peer2:9528/eureka/,http://peer3:9529/eureka/
