--- a/summer-web/pom.xml
+++ b/summer-web/pom.xml
@@ -154,6 +154,13 @@
             <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
             <version>2.0.0.RELEASE</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-netflix-hystrix-dashboard -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix-dashboard</artifactId>
+            <version>2.2.7.RELEASE</version>
+        </dependency>
+
 
         <!--<dependency>
             <groupId>com.bxbro</groupId>
