--- a/summer-web/pom.xml
+++ b/summer-web/pom.xml
@@ -161,12 +161,11 @@
             <version>2.2.7.RELEASE</version>
         </dependency>
 
-
-        <!--<dependency>
-            <groupId>com.bxbro</groupId>
-            <artifactId>hello-spring-boot-starter</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <version>2.1.0.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
