--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <module>summer-eureka</module>
         <module>summer-compute</module>
         <module>summer-order</module>
+        <module>summer-gateway</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
